[Home]

Summary:ASTERISK-25263: [patch]cdr_adaptive_odbc: CDR insert failure due to reversed if logic
Reporter:Elazar Broad (ebroad)Labels:
Date Opened:2015-07-17 14:50:16Date Closed:2015-07-20 18:23:45
Priority:CriticalRegression?Yes
Status:Closed/CompleteComponents:CDR/cdr_adaptive_odbc
Versions:SVN Frequency of
Occurrence
Constant
Related
Issues:
Environment:Slackware LinuxAttachments:( 0) 25263_1.diff
Description:The logic in the if statement which determines whether to use quoted statements in cdr_adaptive_odbc.c is reversed, resulting in a reference to tableptr->quoted_identifiers which is null, which terminates the sql buffer resulting in a truncated SQL statement[INSERT INTO table (].
Comments:By: Asterisk Team (asteriskteam) 2015-07-17 14:50:18.710-0500

Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution.

A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report.

Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process].

By: Matt Jordan (mjordan) 2015-07-20 18:25:06.412-0500

Merged to master - thanks for the patch!